@@ -249,7 +249,7 @@ void GBAKeyEditor::lookupBinding(const GBAInputMap* map, KeyEditor* keyEditor, G
 #ifdef BUILD_SDL
 	if (m_type == SDL_BINDING_BUTTON) {
 		int value = GBAInputQueryBinding(map, m_type, key);
-		if (value != GBA_NO_MAPPING) {
+		if (value != GBA_KEY_NONE) {
 			keyEditor->setValueButton(value);
 		}
 		return;
