@@ -53,6 +53,7 @@ Misc:
  - 3DS: Update to new ctrulib API
  - GBA RR: Add preliminary SRAM support for VBM loading
  - GBA RR: Add support for resets in movies
+ - GBA Input: Consolidate GBA_KEY_NONE and GBA_NO_MAPPING
 
 0.3.2: (2015-12-16)
 Bugfixes:
